# portfolio-practice-hub

./: .gitignore  README.md
api/: .env  .gitignore  .pylintrc  MIGRATIONS.md  main.py  pyproject.toml  pytest.ini  run_tests.py
api/adapters/http/: __init__.py  practice_goal_http_adapter.py  practice_session_http_adapter.py  user_service_http_adapter.py
api/alembic/: env.py
api/alembic/versions/: 1035e88d8fa3_add_practice_sessions.py  16fb6640ab32_add_practice_goals.py  516e1ca20cb5_session_add_description.py  6f59c7e1e5ac_initial_migration_with_schema_creation.py  972ef5f351a8_session_add_duration.py
api/config/: __init__.py  keycloak_config.py
api/constants/: __init__.py  schema_constants.py
api/exceptions/common/: __init__.py  user_exceptions.py  user_settings_exceptions.py
api/exceptions/practice/: __init__.py  goal_exceptions.py  practice_session_exceptions.py
api/middleware/: auth_middleware.py  exception_handlers.py
api/models/auth/: __init__.py  keycloak_models.py
api/models/common/: __init__.py  base_models.py  user_models.py
api/models/practice/: __init__.py  goal_models.py  link_models.py  practice_session_models.py
api/routers/: __init__.py  health_router.py  practice_goal_router.py  practice_session_router.py  user_router.py
api/schemas/common/: __init__.py  error_responses.py  error_schemas.py  health_schemas.py  user_schemas.py
api/schemas/practice/: __init__.py  (+2 more)
api/services/: __init__.py
api/tests/: README.md  TESTING_GUIDE.md  conftest.py  test_main.py
api/utils/: __init__.py  keycloak_utils.py  schema_utils.py
(+170 files in other folders)
